syntax = "proto3";
package configdata;

message Job {
	string Id = 1;
	string name = 2;
	string ExecTime = 3;
	int32 MaxExecutionRecords = 4;
	int32 MaxKeepDays = 5;
	CodeManager codeManager = 6;
}

message CodeManager {
	enum Kind {
		none = 0;
		git = 1;
	}
	Kind Select = 1;
	Git struGit = 2;
}

message Git {
	string Branch = 1;
	Repo repo = 2;
}

message Repo {
	string url = 1;
	string credentials = 2;
	GitAdvanced  advanced = 3;
}

message GitAdvanced {
	string name = 1;
	string refspec = 2; 
}
